# TasteAPI

./: README.md  pyproject.toml
src/api/v1/services/: dishes.py  orders.py
src/models/: dish.py  order.py
src/repositories/: dish.py  order.py
src/schemas/: dish.py  order.py
